# agent-framework-rs

./: .gitignore  ALIGNMENT_PROGRESS.md  CHANGELOG.md  Cargo.toml  GAP_ANALYSIS.md  PARITY.md  PUBLISHING.md  README.md  UPSTREAM_DRIFT.md
crates/agent-framework/: Cargo.toml
crates/agent-framework-a2a/: Cargo.toml
crates/agent-framework-a2a/src/: agent.rs  client.rs  lib.rs  protocol.rs  types.rs
crates/agent-framework-a2a/tests/: loopback.rs
crates/agent-framework-anthropic/: Cargo.toml
crates/agent-framework-anthropic/src/: bedrock.rs  convert.rs  foundry.rs  lib.rs  vertex.rs
crates/agent-framework-azure-ai-search/: Cargo.toml
crates/agent-framework-azure-ai-search/src/: lib.rs
crates/agent-framework-azure-ai-search/tests/: search_loopback.rs
crates/agent-framework-bedrock/: Cargo.toml
crates/agent-framework-bedrock/src/: convert.rs  lib.rs  sigv4.rs
crates/agent-framework-copilotstudio/: Cargo.toml
crates/agent-framework-copilotstudio/src/: activity.rs  agent.rs  auth.rs  lib.rs  settings.rs
crates/agent-framework-copilotstudio/tests/: loopback.rs
crates/agent-framework-core/: Cargo.toml
crates/agent-framework-core/src/: agent.rs  client.rs  compaction.rs  error.rs  history.rs  lib.rs  memory.rs  middleware.rs  observability.rs  session.rs  settings.rs  skills.rs  streaming.rs  threads.rs  tools.rs
crates/agent-framework-core/src/types/: content.rs  embedding.rs  message.rs  mod.rs  options.rs  (+1 more)
crates/agent-framework-core/tests/: checkpoint_signature.rs  integration.rs  observability.rs  observability_metrics.rs  orchestration_approval.rs  orchestration_group_chat.rs  orchestration_handoff.rs  orchestration_magentic.rs  orchestration_magentic_hitl.rs  orchestration_magentic_stall.rs  orchestration_workflow_agent.rs  retry_client.rs  workflow_engine.rs
crates/agent-framework-cosmos/: Cargo.toml
crates/agent-framework-cosmos/src/: auth.rs  chat_message_store.rs  checkpoint_storage.rs  client.rs  dates.rs  lib.rs
crates/agent-framework-cosmos/tests/: loopback.rs
crates/agent-framework-declarative/: Cargo.toml
crates/agent-framework-declarative/src/: agent.rs  condition.rs  env.rs  error.rs  lib.rs  loader.rs  registry.rs  workflow.rs
crates/agent-framework-declarative/tests/: agent_specs.rs  conditions.rs  env_interpolation.rs  roundtrip.rs  workflows.rs
crates/agent-framework-foundry/: Cargo.toml
crates/agent-framework-foundry-local/: Cargo.toml
crates/agent-framework-foundry-local/src/: convert.rs  lib.rs
crates/agent-framework-foundry/src/: lib.rs  tool_definition_wire.rs
crates/agent-framework-foundry/tests/: agent_loopback.rs
crates/agent-framework-gemini/: Cargo.toml
crates/agent-framework-gemini/src/: convert.rs  lib.rs
crates/agent-framework-hosting/: Cargo.toml
crates/agent-framework-hosting/src/: a2a.rs  agui.rs  lib.rs  openai_compat.rs  registry.rs  responses.rs  security.rs  sse.rs  ui.rs  util.rs
crates/agent-framework-hosting/tests/: a2a.rs  agui.rs  devui.rs  loopback.rs  openai_compat.rs  security.rs  ui.rs
crates/agent-framework-mcp/: Cargo.toml
crates/agent-framework-mcp/src/: client.rs  lib.rs  protocol.rs  sampling.rs  tool.rs
crates/agent-framework-mcp/tests/: http_loopback.rs  stdio_e2e.rs  websocket_e2e.rs
crates/agent-framework-mem0/: Cargo.toml
crates/agent-framework-mem0/src/: lib.rs  provider.rs
crates/agent-framework-mem0/tests/: http_loopback.rs
crates/agent-framework-purview/: Cargo.toml
crates/agent-framework-purview/src/: auth.rs  client.rs  lib.rs  middleware.rs  models.rs  processor.rs  settings.rs
crates/agent-framework-purview/tests/: loopback.rs
crates/agent-framework-redis/: Cargo.toml
crates/agent-framework-redis/src/: chat_message_store.rs  context_provider.rs  internal.rs  lib.rs
crates/agent-framework-redis/tests/: redis_integration.rs
crates/agent-framework/examples/: a2a_client.rs  anthropic.rs  azure_openai.rs  cosmos_store.rs  declarative_agent.rs  handoff.rs  hosting_server.rs  magentic_plan_review.rs  mcp_sampling.rs  mcp_tools.rs  observability.rs  openai_responses.rs  purview_middleware.rs  quickstart.rs  streaming.rs
crates/agent-framework/src/: lib.rs
examples/: Cargo.toml  README.md
examples/a2a/: a2a_client.rs
examples/agents/: agent_as_tool.rs  agent_middleware.rs  approvals.rs  chat_middleware.rs  compaction_basics.rs  compaction_provider.rs  custom_context_provider.rs  file_history_provider.rs  function_middleware.rs  image_input.rs  middleware_patterns.rs  multi_turn_conversation.rs  per_run_options.rs  quickstart.rs  retry_policy.rs  skills.rs  streaming.rs  structured_output.rs  suspend_resume_session.rs  thread_persistence.rs  tools.rs  typed_tools.rs
examples/compliance/: purview_middleware.rs
examples/declarative/: declarative_agent.rs  declarative_workflow.rs
examples/hosting/: a2a_server.rs  agui_server.rs  devui_server.rs  openai_compat_server.rs  streaming_sse.rs
examples/mcp/: mcp_first_class_tools.rs  mcp_prompts.rs  mcp_roots.rs  mcp_sampling.rs  mcp_tools.rs
examples/memory/: azure_ai_search.rs  cosmos_store.rs  mem0_memory.rs  redis_memory.rs
examples/observability/: observability.rs  otel_metrics.rs
examples/orchestrations/: agent_approval.rs  concurrent.rs  group_chat.rs  handoff.rs  magentic.rs  magentic_plan_review.rs  magentic_stall_intervention.rs  sequential.rs  streaming_updates.rs
examples/providers/: anthropic.rs  anthropic_hosted_tools.rs  anthropic_multicloud.rs  azure_default_credential.rs  azure_foundry_agent.rs  azure_foundry_bing_grounding.rs  azure_openai.rs  azure_openai_responses.rs  bedrock.rs  copilotstudio_agent.rs  foundry_local.rs  gemini.rs  github_copilot.rs  mistral.rs  ollama.rs  openai_assistants.rs  openai_compatible_endpoint.rs  openai_embeddings.rs  openai_responses.rs
examples/workflows/: agents_in_workflows.rs  checkpoint.rs  checkpoint_resume_fanin.rs  concurrent_supersteps.rs  conditional_edges.rs  custom_executors.rs  fan_out_fan_in.rs  hitl.rs  loops_and_max_iterations.rs  shared_state.rs  sub_workflows.rs  switch_case.rs  viz.rs  workflow_as_agent.rs
(+62 files in other folders)
