[workspace]
resolver = "2"
members = [
    "crates/agent-framework-core",
    "crates/agent-framework-openai",
    "crates/agent-framework-anthropic",
    "crates/agent-framework-azure",
    "crates/agent-framework-mcp",
    "crates/agent-framework-a2a",
    "crates/agent-framework-declarative",
    "crates/agent-framework-hosting",
    "crates/agent-framework-redis",
    "crates/agent-framework-mem0",
    "crates/agent-framework-azure-ai",
    "crates/agent-framework-azure-ai-search",
    "crates/agent-framework-cosmos",
    "crates/agent-framework-copilotstudio",
    "crates/agent-framework-purview",
    "crates/agent-framework",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/codehalwell/agent-framework-rs"
authors = ["agent-framework-rs contributors"]
description = "A Rust implementation of the Microsoft Agent Framework for building AI agents and multi-agent workflows"
keywords = ["ai", "agents", "llm", "workflow", "openai"]
categories = ["asynchronous", "api-bindings"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
schemars = "0.8"
bytes = "1"
tokio-stream = "0.1"
pin-project-lite = "0.2"
# OTel API only (no SDK/exporter) — see agent-framework-core's `otel-metrics`
# feature. `opentelemetry_sdk` is a test-only dependency there (in-memory
# metric reader), pinned here for version consistency should another crate
# need it later.
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["metrics", "testing"] }

agent-framework-core = { path = "crates/agent-framework-core", version = "0.1.0" }
agent-framework-openai = { path = "crates/agent-framework-openai", version = "0.1.0" }
agent-framework-anthropic = { path = "crates/agent-framework-anthropic", version = "0.1.0" }
agent-framework-azure = { path = "crates/agent-framework-azure", version = "0.1.0" }
agent-framework-mcp = { path = "crates/agent-framework-mcp", version = "0.1.0" }
agent-framework-a2a = { path = "crates/agent-framework-a2a", version = "0.1.0" }
agent-framework-declarative = { path = "crates/agent-framework-declarative", version = "0.1.0" }
agent-framework-hosting = { path = "crates/agent-framework-hosting", version = "0.1.0" }
agent-framework-redis = { path = "crates/agent-framework-redis", version = "0.1.0" }
agent-framework-mem0 = { path = "crates/agent-framework-mem0", version = "0.1.0" }
agent-framework-azure-ai = { path = "crates/agent-framework-azure-ai", version = "0.1.0" }
agent-framework-azure-ai-search = { path = "crates/agent-framework-azure-ai-search", version = "0.1.0" }
agent-framework-cosmos = { path = "crates/agent-framework-cosmos", version = "0.1.0" }
agent-framework-copilotstudio = { path = "crates/agent-framework-copilotstudio", version = "0.1.0" }
agent-framework-purview = { path = "crates/agent-framework-purview", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
