[package]
name = "agent-framework-anthropic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Anthropic (Claude) chat client for agent-framework-rs"

[dependencies]
agent-framework-core = { workspace = true }
agent-framework-bedrock = { workspace = true }
agent-framework-azure = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
