[package]
name = "agent-framework-cosmos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Azure Cosmos DB NoSQL chat-message store"

[dependencies]
agent-framework-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
# Master-key request signing (HMAC-SHA256 over a canonical string, per
# https://learn.microsoft.com/en-us/rest/api/cosmos-db/access-control-on-cosmosdb-resources).
# All three are small, pure-Rust, and already resolve cleanly alongside this
# workspace's existing `reqwest`/TLS dependency graph (`base64` and `digest`,
# the shared base of `hmac`/`sha2`, are already present in Cargo.lock).
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
