[package]
name = "agent-framework-foundry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Azure AI Foundry (Responses API) chat client and Prompt Agents for agent-framework-rs"

[dependencies]
agent-framework-core = { workspace = true }
agent-framework-azure = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
