[package]
name = "agent-framework-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model Context Protocol (MCP) client: stdio and streamable HTTP transports"

[dependencies]
agent-framework-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
# rustls-tls-webpki-roots matches the workspace's reqwest rustls choice
# (`rustls-tls` = `rustls-tls-webpki-roots`, see root Cargo.toml) — no native-tls.
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "connect",
    "handshake",
    "rustls-tls-webpki-roots",
] }

[dev-dependencies]
tokio = { workspace = true }
