[package]
name = "agent-framework-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Redis-backed chat message store and context provider"

[dependencies]
agent-framework-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# Async Redis client. `tokio-comp` pulls in the `aio` feature set (the
# `MultiplexedConnection` type, `AsyncCommands`/`AsyncTypedCommands` traits);
# default features (acl/streams/geospatial/script/num-bigint) are disabled
# since this crate only needs plain key/list commands.
redis = { version = "1", default-features = false, features = ["tokio-comp"] }

[dev-dependencies]
tokio = { workspace = true }
