[package]
name = "agent-framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A Rust implementation of the Microsoft Agent Framework: build AI agents and multi-agent workflows. Meta-crate re-exporting core and providers."

[features]
default = ["openai"]
openai = ["dep:agent-framework-openai"]
anthropic = ["dep:agent-framework-anthropic"]
azure = ["dep:agent-framework-azure"]
mcp = ["dep:agent-framework-mcp"]
full = ["openai", "anthropic", "azure", "mcp"]

[dependencies]
agent-framework-core = { workspace = true }
agent-framework-openai = { workspace = true, optional = true }
agent-framework-anthropic = { workspace = true, optional = true }
agent-framework-azure = { workspace = true, optional = true }
agent-framework-mcp = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[[example]]
name = "anthropic"
required-features = ["anthropic"]

[[example]]
name = "azure_openai"
required-features = ["azure"]

[[example]]
name = "mcp_tools"
required-features = ["mcp"]
