[package]
name = "agent-framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A Rust implementation of the Microsoft Agent Framework: build AI agents and multi-agent workflows. Meta-crate re-exporting core and providers."

[features]
default = ["openai"]
openai = ["dep:agent-framework-openai"]
anthropic = ["dep:agent-framework-anthropic"]
azure = ["dep:agent-framework-azure"]
mcp = ["dep:agent-framework-mcp"]
a2a = ["dep:agent-framework-a2a"]
declarative = ["dep:agent-framework-declarative"]
hosting = ["dep:agent-framework-hosting"]
redis = ["dep:agent-framework-redis"]
mem0 = ["dep:agent-framework-mem0"]
azure-ai = ["dep:agent-framework-azure-ai"]
azure-ai-search = ["dep:agent-framework-azure-ai-search"]
cosmos = ["dep:agent-framework-cosmos"]
copilotstudio = ["dep:agent-framework-copilotstudio"]
purview = ["dep:agent-framework-purview"]
# GenAI metrics (token-usage / operation-duration / function-invocation
# histograms) via the opentelemetry API crate — see agent-framework-core's
# observability module docs.
otel-metrics = ["agent-framework-core/otel-metrics"]
full = [
    "openai",
    "anthropic",
    "azure",
    "mcp",
    "a2a",
    "declarative",
    "hosting",
    "redis",
    "mem0",
    "azure-ai",
    "azure-ai-search",
    "cosmos",
    "copilotstudio",
    "purview",
]

[dependencies]
agent-framework-core = { workspace = true }
agent-framework-openai = { workspace = true, optional = true }
agent-framework-anthropic = { workspace = true, optional = true }
agent-framework-azure = { workspace = true, optional = true }
agent-framework-mcp = { workspace = true, optional = true }
agent-framework-a2a = { workspace = true, optional = true }
agent-framework-declarative = { workspace = true, optional = true }
agent-framework-hosting = { workspace = true, optional = true }
agent-framework-redis = { workspace = true, optional = true }
agent-framework-mem0 = { workspace = true, optional = true }
agent-framework-azure-ai = { workspace = true, optional = true }
agent-framework-azure-ai-search = { workspace = true, optional = true }
agent-framework-cosmos = { workspace = true, optional = true }
agent-framework-copilotstudio = { workspace = true, optional = true }
agent-framework-purview = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
async-trait = { workspace = true }
axum = "0.8"
